# -resume-screener

./: MOVIE_RECOMMENDATION_SYSTEM.ipynb  README.md  ai_resume_analysis.json  main.py
analyzers/: extractor.py  parser.py
apps/api/: .env.example  pyproject.toml  schema.prisma
apps/api/app/: main.py
apps/api/app/api/assessments/: router.py  schemas.py
apps/api/app/api/auth/: crud.py  dependencies.py  router.py  schemas.py
apps/api/app/api/jobs/: router.py  schemas.py
apps/api/app/api/resumes/: router.py  schemas.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: client.py
apps/api/app/schemas/: resume.py
apps/api/app/services/: matching.py  resume_extraction.py
apps/web/: package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/signin/: page.tsx
apps/web/src/app/signup/: page.tsx
apps/web/src/components/: AuthForm.tsx  AuthLayout.tsx
apps/web/src/lib/: api.ts
apps/web/src/types/: auth.d.ts
utils/: helpers.py
