[tool.poetry]
name = "resume-screener-api"
version = "0.1.0"
description = "FastAPI backend for AI resume screener"
authors = ["AI Team <team@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlmodel = "^0.0.8"
psycopg[binary] = "^3.2"
python-dotenv = "^1.0"
httpx = "^0.28.0"
python-jose = "^3.3.0"
passlib[bcrypt] = "^1.8.0"
prisma-client-py = "^0.11.0"
python-multipart = "^0.0.6"
```

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.22.0"
black = "^24.3.0"
ruff = "^0.0.316"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
